<?xml version="1.0"?>
<package format="3">
  <name>motion_node</name>
  <version>0.1.0</version>
  <description>Motor control (ROS 2)</description>
  <maintainer email="you@domain">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>diagnostic_msgs</depend>
</package>
