<?xml version="1.0"?>
<package format="3">
  <name>motion_node</name>
  <version>0.1.0</version>
  <description>Motor control node (ROS 2 Humble)</description>
  <maintainer email="you@domain">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>diagnostic_msgs</depend>
</package>
