<?xml version="1.0"?>
<package format="3">
  <name>sensors_node</name>
  <version>0.1.0</version>
  <description>Sensors data publisher (ROS 2 Humble)</description>
  <maintainer email="you@domain">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
</package>
